# ai-model-connector

./: .replit  pnpm-lock.yaml  pyproject.toml
artifacts/api-server/: package.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/lib/: google.ts  session.ts
artifacts/api-server/src/routes/: auth.ts  contacts.ts  index.ts
artifacts/contact-importer/: index.html  package.json
artifacts/contact-importer/.replit-artifact/: artifact.toml
artifacts/contact-importer/src/: App.tsx  index.css
artifacts/contact-importer/src/lib/: api.ts
artifacts/contact-importer/src/pages/: Chat.tsx  Contacts.tsx  Home.tsx  Settings.tsx
backend/: start.sh
backend/aiconnector/: models.py  urls.py  views.py
backend/contacts/: models.py  urls.py  views.py
backend/core/: settings.py  urls.py
lib/api-spec/: openapi.yaml
